--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /*******
 *
 *
@@ -26,7 +25,7 @@ h1{
 	margin-bottom: 18px;
 }
 .top-bar{
-	background: #62575d;
+	background: #2c3e50;
 	padding-bottom: 50px;
 	padding-top: 50px;
 }
@@ -141,7 +140,7 @@ h1{
 	-ms-transform: scale(1.2);
 	-o-transform: scale(1.2);
 }
-.social-icons a i.fa--github:hover{
+.social-icons a i.fa-google-plus:hover{
 	color: #DA4835;
 	transform: scale(1.2);
 	-webkit-transform: scale(1.2);
@@ -156,7 +155,7 @@ h1{
 	position: absolute;
 	top: 0;
 	right: 0;
-	border-top: 80px solid #62575d;
+	border-top: 80px solid #2c3e50;
 	border-left: 80px solid transparent;
 	z-index: 333;
 }
@@ -270,8 +269,8 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	padding-bottom: 65px;
 }
 .read-more a:hover{
-	background: #62575d;
-	border-color: #62575d;
+	background: #2C3E50;
+	border-color: #2C3E50;
 	color: #fff;
 }
 .post-pagination{
@@ -297,7 +296,7 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 
 /*******Footer********/
 .footer{
-	background: #62575d;
+	background: #2c3e50;
 	color: #fff;
 	padding-top: 53px;
 }
@@ -314,14 +313,14 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	padding: 10px;
 	color: #fff;
 	margin-top: 10px;
-	border: 1px solid #332c30;
-	background: #62575d;
+	border: 1px solid #495e74;
+	background: #2c3e50;
 }
 .footer input[type="submit"] {
 	font-size: 14px;
 	color: #bbbbbb;
 	text-transform: uppercase;
-	background: #81727b;
+	background: #3a4e62;
 	border: 0;
 	margin-bottom: 20px;
 	transition: all .5s ease 0s;
@@ -331,7 +330,7 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	-ms-transition: all .5s ease 0s;
 }
 .footer input[type="submit"]:hover{
-	background: #53494f;
+	background: #253544;
 }
 .footer a{
 	font-size: 18px;
@@ -353,7 +352,7 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	font-size: 20px;
 	color: #fff;
 	padding: 10px;
-	border: 1px solid #332c30;
+	border: 1px solid #495e74;
 	border-radius: 50%;
 	width: 40px;
 	height: 40px;
@@ -390,7 +389,7 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	margin-top: 0;
 }
 .footer-bottom{
-	border-top: 1px solid #332c30;
+	border-top: 1px solid #495e74;
 }
 .footer-bottom p{
 	font-size: 14px;
@@ -411,7 +410,7 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	-ms-transition: all .5s ease 0s;
 }
 .fa-arrow-up:hover{
-	background: #53494f;
+	background: #253544;
 }
 
 
@@ -422,13 +421,13 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 }
 .works h2, .about h2, .contact h2{
 	font-size: 24px;
-	color: #62575d;
+	color: #2c3e50;
 	text-transform: uppercase;
 	font-weight: bold;
 }
 .works ul li{
 	font-size: 14px;
-	color: #62575d;
+	color: #2c3e50;
 	text-transform: uppercase;
 	padding: 10px 20px;
 	text-decoration: none;
@@ -443,13 +442,13 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	-ms-transition: all .5s ease 0s;
 }
 .works ul li:hover{
-	background: #62575d;
-	border-color: #62575d;
+	background: #2c3e50;
+	border-color: #2c3e50;
 	color: #fff;
 }
 .works ul li.active{
-	background: #62575d;
-	border-color: #62575d;
+	background: #2c3e50;
+	border-color: #2c3e50;
 	color: #fff;
 }
 .single-work img{
@@ -592,7 +591,7 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
     font-size: 14px;
     color: #fff;
     text-transform: uppercase;
-    background: #81727b;
+    background: #3a4e62;
     border: 0;
     margin-bottom: 20px;
     transition: all .5s ease 0s;
@@ -602,7 +601,7 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
     -ms-transition: all .5s ease 0s;
 }
 .contact input[type="submit"]:hover{
-	background: #53494f;
+	background: #253544;
 }
 .form-control{
 	height: 45px;
